# providence

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.cursor/commands/: predict-next-race.md  setup-autorace-daemon.md
data/models/: stacking_lr.pkl
docs/autorace/: 01-autorace-structure.md  02-feature-catalog.md  03-data-sources.md  04-model-design.md  05-strategy-and-market.md  06-pitfalls.md  07-strategy-search-log.md  README.md  glossary.md
docs/keiba/: 01-jra-structure.md  02-feature-catalog.md  06-pitfalls.md  (+5 more)
scripts/: backfill_2024_odds.py  backfill_2025_odds.py  backfill_jan_feb_odds.py  backfill_march_odds.py  backfill_remaining_odds.py  backfill_retry.py  backfill_rider_rank.py  bet_optimization_v4.py  bet_optimization_v5_extended.py  filter_refinement.py  investigate_winticket_betting_flow.py  investigate_winticket_cart.py  investigate_winticket_confirm.py  investigate_winticket_dom.py  keiba_backtest.py  keiba_betting_strategy.py  keiba_evaluate.py  keiba_evaluate_independent.py  keiba_evaluate_value_wide.py  keiba_evaluate_wide.py  keiba_import.py  keiba_reparse_local.py  keiba_strategy_full.py  keiba_train.py  keiba_train_independent.py  keiba_train_phase3c.py  odds_impact_analysis.py  phase0_poll.py  phase1_strategy_grid_search.py  phase3_odds_stacking.py  phase4_daily_ops.sh  phase4_env.example  poc_frame_extract.py  poc_measurement_lap.py  poc_optical_flow.py  poc_rider_tracking.py  poc_rider_tracking_v2.py  poc_rider_tracking_v3.py  poc_rider_tracking_v4.py  record_winticket_steps.py  (+4 more)
tests/: conftest.py
(+225 files in other folders)
