[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/providence"]

[project]
name = "providence"
version = "0.1.0"
description = "Autorace and horse racing prediction system"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "polars>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "tenacity>=9.0",
    "aiolimiter>=1.1",
    "structlog>=24.0",
    "lightgbm>=4.6.0",
    "optuna>=4.8.0",
    "shap>=0.51.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.3",
    "psycopg[binary]>=3.1",
    "lhafile>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "respx>=0.22",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.scripts]
providence = "providence.cli.app:app"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
